--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -4399,12 +4399,13 @@
 								skill.name;
 							update[`${section}_rating`] = skill.rating;
 							update[`${section}_rating_modifier`] = skill.ratingmod;
-	            			const skilltotal = parseInt(skill.rating) + parseInt(skill.ratingmod);
+
+              const skilltotal = parseInt(skill.rating) + parseInt(skill.ratingmod);
 							update[`${section}_dicepool`] = skilltotal;
 
 							//ACTIVE SKILLS HAVE THEIR TOTAL SAVED IN A HIDDEN ATTRIBUTE
 							if (type === "active") {
-								update[skill.name.toLowerCase().replace(/ /g, "")] = skill.total;
+								update[skill.name.toLowerCase().replace(/ /g, "")] = skilltotal;
 							};
 
 							//This needs to be verified with multiple specializations
