--- a/Call_of_Cthulhu_7th_Ed_Chinese_Traditional/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed_Chinese_Traditional/coc_7th_ed.html
@@ -253,7 +253,7 @@
 					</td>
 					<td style="text-align: center">/</td>
 					<td colspan="4">
-						<input class="secondary-attr-input"  placeholder="初始" type="text" min="0" name="attr_san_start">
+						<input class="secondary-attr-input"  placeholder="初始" type="text" min="0" name="attr_san_start" value="0">
 						<input class="secondary-attr-input" type="number" min="0"  name="attr_san_when_insane" placeholder="不定性瘋狂值" value="@{san_start}-floor(@{san_start}/5)" disabled="true">
 					</td>
 					<td style="text-align: center">/</td>
