fixed: synchronize attribute for asp and magic tradition

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -3159,19 +3159,18 @@
 		<h2 data-i18n="magie">Magie</h2>
 		<div class="magie-header-grid">
 							<input class="magie-header magie-header-1" type="text" name='attr_magie_tradition' value='Tradition' />
-							<select class="magie-header magie-header-2" name="attr_magie_traditionseigenschaft" >
-									<option selected>---</option>
-									<option value="@{mut_gesamt}" data-i18n="MU">MU</option>
-									<option value="@{klugheit_gesamt}" data-i18n="KL">KL</option>
-									<option value="@{intuition_gesamt}" data-i18n="IN">IN</option>
-									<option value="@{charisma_gesamt}" data-i18n="CH">CH</option>
-									<option value="@{fingerfertigkeit_gesamt}" data-i18n="FF">FF</option>
-									<option value="@{gewandheit_gesamt}" data-i18n="GE">GE</option>
-									<option value="@{konstitution_gesamt}" data-i18n="KO">KO</option>
-									<option value="@{koerperkraft_gesamt}" data-i18n="KK">KK</option>
+							<select class="magie-header magie-header-2" name="attr_leiteigenschaft_ae" >
+								<option selected>---</option>
+								<option value="MU" data-i18n="MU">MU</option>
+								<option value="KL" data-i18n="KL">KL</option>
+								<option value="IN" data-i18n="IN">IN</option>
+								<option value="CH" data-i18n="CH">CH</option>
+								<option value="FF" data-i18n="FF">FF</option>
+								<option value="GE" data-i18n="GE">GE</option>
+								<option value="KO" data-i18n="KO">KO</option>
+								<option value="KK" data-i18n="KK">KK</option>
 							</select>
-
-		          <span class="magie-header magie-header-4" data-i18n="wirkungsdauer">Wirkungsdauer</span>
+							<span class="magie-header magie-header-4" data-i18n="wirkungsdauer">Wirkungsdauer</span>
 							<select class="magie-header magie-header-5" name="attr_zauberdauer_mod">
 									<option value="0" selected>---</option>
 									<option value="-1" data-i18n="dauer-verkuerzen">Dauer verkürzen (halbiert) -1</option>
@@ -3406,18 +3405,17 @@
 			<h2 data-i18n="glaube">Glaube</h2>
 			<div class="glaube-header-grid">
 								<input class="glaube-header glaube-header-1" type="text" name='attr_glaube_tradition' value='Tradition' />
-								<select class="glaube-header glaube-header-2" name="attr_glaube_traditionseigenschaft" >
-										<option selected>---</option>
-										<option value="@{mut_gesamt}" data-i18n="MU">MU</option>
-										<option value="@{klugheit_gesamt}" data-i18n="KL">KL</option>
-										<option value="@{intuition_gesamt}" data-i18n="IN">IN</option>
-										<option value="@{charisma_gesamt}" data-i18n="CH">CH</option>
-										<option value="@{fingerfertigkeit_gesamt}" data-i18n="FF">FF</option>
-										<option value="@{gewandheit_gesamt}" data-i18n="GE">GE</option>
-										<option value="@{konstitution_gesamt}" data-i18n="KO">KO</option>
-										<option value="@{koerperkraft_gesamt}" data-i18n="KK">KK</option>
+								<select class="glaube-header glaube-header-2" name="attr_leiteigenschaft_ke" class="eigenschaft">
+									<option selected>---</option>
+									<option value="MU" data-i18n="MU">MU</option>
+									<option value="KL" data-i18n="KL">KL</option>
+									<option value="IN" data-i18n="IN">IN</option>
+									<option value="CH" data-i18n="CH">CH</option>
+									<option value="FF" data-i18n="FF">FF</option>
+									<option value="GE" data-i18n="GE">GE</option>
+									<option value="KO" data-i18n="KO">KO</option>
+									<option value="KK" data-i18n="KK">KK</option>
 								</select>
-
 								<span class="glaube-header glaube-header-4" data-i18n="wirkungsdauer">Wirkungsdauer</span>
 								<select class="glaube-header glaube-header-5" name="attr_liturgiedauer_mod">
 										<option value="0" selected>---</option>
