add metavariant support

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -4264,7 +4264,6 @@
 			,"limitsocial": "limit_social"
 			,"magician": "flag_special"
 			,"memory": "memory"
-			,"metatype": "metatype"
 			,"nuyen":"primary_nuyen"
 			,"physicalcm": "physical_max"
 			//,"physicalcmfilled": "physical_damage" //RESULTING IN INFINATE LOOP
@@ -4340,6 +4339,16 @@
 					setText["error"] += addFeedback(JSON.stringify(key), error);
 				};
 			});
+
+			// PROCESS METATYPE
+			try {
+				update[`metatype`] = character.metatype;
+				if (character.metavariant) {
+					update[`metatype`] += ` (${character.metavariant})`
+				}
+			} catch (error) {
+				setText["error"] += addFeedback(JSON.stringify(character.metatype), error);
+			};
 
 			// PROCESS ATTRIBUTES
 			const attributes = character.attributes[1].attribute;
