--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -4409,7 +4409,7 @@
 							update[`${section}_rating`] = skill.rating;
 							update[`${section}_rating_modifier`] = skill.ratingmod;
 
-              const skilltotal = parseInt(skill.rating) + parseInt(skill.ratingmod);
+              				const skilltotal = parseInt(skill.rating) + parseInt(skill.ratingmod);
 							update[`${section}_dicepool`] = skilltotal;
 
 							//ACTIVE SKILLS HAVE THEIR TOTAL SAVED IN A HIDDEN ATTRIBUTE
@@ -4836,7 +4836,7 @@
 						const section = `repeating_contacts_${id}`;
 						let contactNotes = "";
 
-					    update[`${section}_name`] = (contact.role != null) ? `${contact.name} (${contact.role})` : contact.name;
+					    update[`${section}_name`] = (contact.role != null) ? `${contact.name} (${contact.role})` : `${contact.name}`;
 					    update[`${section}_loyalty`] = contact.loyalty;
 					    update[`${section}_connection`] = contact.connection;
 					    update[`${section}_flag`] = "display";
