--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -5,34 +5,15 @@
 
 <!-- TABS & LOGO
    ============================= -->
-<div class="tabs">
-	<!-- PUT LOGO HERE. UPDATE ALT TEXT -->
-	<img alt="Emerald Productions logo" src="https://raw.githubusercontent.com/clevett/SheetTemplate/master/images/EProd_Title_Gloss.png">
-	<div class="grid grid-tab-inputs">
-		<!-- INFO INPUTS -->
-		<!-- data-i18n is for translating to multiple languages -->
-		<span data-i18n="character">character</span>
-		<label data-i18n-title="" title="character name">
-			<input data-i18n-placeholder="character-name" name="attr_character_name" placeholder="character name" title="@{character_name}" type="text" value="" />
-		</label>
-		<span data-i18n="player">player</span>
-		<label data-i18n-title="player-name" title="player name">
-			<input data-i18n-placeholder="" name="attr_player_name" placeholder="player name" title="@{player_name}" type="text" value="" />
-		</label>
-		<span data-i18n="notes">notes</span>
-		<label data-i18n-title="" title="character notes">
-			<input data-i18n-placeholder="character-notes" name="attr_character_notes" placeholder="character notes" title="@{character_notes}" type="text" value="" />
-		</label>
-	</div>
-	<div class="grid grid-tab-buttons">
-		<!-- Buttons to toggle on GM whisper -->
-		<input class="whisper-toggle" name="attr_gm_toggle" type="hidden"  value=" " />
-		<button name="act_whisper" data-i18n-title="gm-whisper" title="gm whisper" type="action">q</button>
-		<!-- CHARACTER SHEETS -->
-	    <button data-i18n="pc" data-i18n-title="" name="act_toggle_character" title="player character button" type="action">pc</button>
-	    <button data-i18n="notes" data-i18n-title="" name="act_toggle_notes" title="notes button" type="action">notes</button>
-	    <button data-i18n="npc" data-i18n-title="" name="act_toggle_npc" title="non player character" type="action">npc</button>
-	</div>
+<div class="tabs grid grid-tabs">
+	<!-- Buttons to toggle on GM whisper -->
+	<input class="whisper-toggle" name="attr_gm_toggle" type="hidden"  value=" " />
+	<button data-i18n-title="" name="act_whisper" title="gm whisper" type="action">Whisper GM</button>
+	<!-- LOGO -->
+	<img alt="Delta Green" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg">
+	<!-- CHARACTER SHEETS -->
+    <button data-i18n="" data-i18n-title="" name="act_toggle_character" title="player character button" type="action">pc</button>
+    <button data-i18n="" data-i18n-title="" name="act_toggle_npc" title="non-player character" type="action">npc</button>
 </div>
 
 <!-- NPC SHEET
@@ -49,22 +30,14 @@
 <!-- PC SHEET
    ============================= -->
 <div class="pc">
-	<div class="grid grid-header">
+	<div class="grid personal-data">
 		<button class="pictos" data-i18n-title="" name="act_toggle_attributes" title="player character attributes" type="action">y</button>
-		<h1 data-i18n="attributes" data-i18-title="attributes" title="attributes">attributes</h1>
+		<h1 data-i18n="personal-data" data-i18-title="personal-data" title="personal data">personal data</h1>
 	</div>
-	<div class="grid grid-pc-attributes">
-		<!-- STRENGHT -->
+		<!-- STRENGHT 
 		<button name="roll_strength" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{strength}}}{{base=^{attributes}}}{{dice=[[(@{strength}+(@{attribute_roll})+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">
 			<h2 data-i18n="strength">strength</h2>
-		</button>
-		<label data-i18n-title="strenght-input" title="strength input">
-			<input data-i18n-placeholder="" name="attr_strength" placeholder="10" title="@{strength}" type="number" value="" />
-		</label>
-	</div>
-	<h1 data-i18n="h1" data-i18-title="h1" title="header 1">Header 1</h1>
-	<h2 data-i18n="h2" data-i18-title="h2" title="header 2">Header 2</h2>
-	<h3 data-i18n="h3" data-i18-title="h3" title="header 3">Header 3</h3>
+		</button>-->
 </div>
 
 <!-- NOTES SHEET
@@ -123,7 +96,7 @@ const setAttributes = (update, silent) => {
 	const arrays = {
 		attributes: ["agility", "body", "charisma", "edge", "intuition", "logic", "strength", "willpower" ], //EXAMPLE
 		repeating_settings: [],
-		sheets: ["character", "npc", "notes"], //EXAMPLE. ADD MOTE SHEET TYPES here
+		sheets: ["character", "npc"], //EXAMPLE. ADD MOTE SHEET TYPES here
 		toggles: ["attributes"]
 	};
 
