--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -1,7 +1,7 @@
 
 <!--VERSION=============================
 -->
-<input name="attr_version" type="hidden" value="1.1"/>
+<input name="attr_version" type="hidden" value="1"/>
 <!-- TABS=============================
 -->
 <input class="type" name="attr_sheet_type" type="hidden" value="character"/>
@@ -30,9 +30,50 @@
 <!--PC SHEET=============================
 -->
 <div class="pc">
-  <div class="grid personal-data">
-    <button class="pictos" data-i18n-title="" name="act_toggle_attributes" title="player character attributes" type="action">y</button>
-    <h1 data-i18n="personal-data" data-i18-title="personal-data" title="personal data">personal data</h1>
+  <div class="grid personal-data border">
+    <div class="section-header">
+      <h1 data-i18n="personal-data" data-i18-title="personal-data" title="personal data">personal data</h1>
+    </div>
+    <div class="section-body">
+      <div class="grid section-border">
+        <h2 data-i18n="">1. last name, first name (and alias or code name if applicable)</h2>
+        <label data-i18-title="" title="last name, first name (and alias or code name if applicable)">
+          <input name="attr_name" placeholder="name" title="${name}" type="text"/>
+        </label>
+        <div class="vert-line"></div>
+        <h2 data-i18n="">2. profession (rank if applicable)</h2>
+        <label data-i18-title="" title="profession (rank if applicable)">
+          <input name="attr_profession" placeholder="profession" title="${profession}" type="text"/>
+        </label>
+      </div>
+      <div class="grid section-border">
+        <h2 data-i18n="">3. employer</h2>
+        <label data-i18-title="" title="employer">
+          <input name="attr_employer" placeholder="employer" title="${employer}" type="text"/>
+        </label>
+        <div class="vert-line"></div>
+        <h2 data-i18n="">4. nationality</h2>
+        <label data-i18-title="" title="nationality">
+          <input name="attr_nationality" placeholder="nationality" title="${nationality}" type="text"/>
+        </label>
+      </div>
+      <div class="grid section-border">
+        <h2 data-i18n="">5. sex</h2>
+        <label data-i18-title="" title="sex">
+          <input name="attr_sex" placeholder="sex" title="${sex}" type="text"/>
+        </label>
+        <div class="vert-line"></div>
+        <h2 data-i18n="">6. age and d.o.b.</h2>
+        <label data-i18-title="" title="age and d.o.b.">
+          <input name="attr_age" placeholder="age and d.o.b." title="${age}" type="text"/>
+        </label>
+        <div class="vert-line"></div>
+        <h2 data-i18n="">7. education and occupational history</h2>
+        <label data-i18-title="" title="education">
+          <input name="attr_education" placeholder="education and occupational history" title="${education}" type="text"/>
+        </label>
+      </div>
+    </div>
   </div>
 </div>
 <!--NOTES SHEET=============================
