stat-pysch data wip

--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -11,7 +11,7 @@
 <div class="tabs grid grid-tabs">
   <!-- Buttons to toggle on GM whisper-->
   <input class="whisper-toggle" name="attr_gm_toggle" type="hidden" value=" "/>
-  <button data-i18n-title="" name="act_whisper" title="gm whisper" type="action">Whisper GM</button>
+  <button data-i18n="" data-i18n-title="" name="act_whisper" title="gm whisper" type="action">Whisper GM</button>
   <!-- LOGO--><img alt="Delta Green" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg"/>
   <!-- CHARACTER SHEETS-->
   <button data-i18n="" data-i18n-title="" name="act_toggle_character" title="player character button" type="action">pc</button>
@@ -30,9 +30,10 @@
 <!--PC SHEET=============================
 -->
 <div class="pc">
+  <!--PERSONAL DATA-->
   <div class="grid personal-data border">
     <div class="section-header">
-      <h1 data-i18n="personal-data" data-i18-title="personal-data" title="personal data">personal data</h1>
+      <h1 data-i18n="personal-data">personal data</h1>
     </div>
     <div class="section-body">
       <div class="grid section-border">
@@ -74,6 +75,25 @@
         </label>
       </div>
     </div>
+  </div>
+  <!--STATISTICAL & PSYCHOLOGICAL DATA-->
+  <div class="grid personal-data border">
+    <div class="section-header">
+      <h1 data-i18n="">statistical data</h1>
+    </div>
+    <div class="section-body">
+      <div class="grid section-border">
+        <h2 data-i18n="">8. statistics</h2>
+        <h2 data-i18n="">score</h2>
+        <h2 data-i18n="">x5</h2>
+        <h2 data-i18n="">distinguishing features</h2>
+      </div>
+    </div>
+    <!--STATISTICAL DATA-->
+    <div class="section-header">
+      <h1 data-i18n="">pyschological data </h1>
+    </div>
+    <!--PSYCHOLOGICAL DATA-->
   </div>
 </div>
 <!--NOTES SHEET=============================
