--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -8,14 +8,13 @@
 <input class="display_string" name="attr_character_settings" type="hidden" value=""/>
 <!--TABS & LOGO=============================
 -->
-<div class="tabs grid grid-tabs">
+<div class="tabs grid">
   <!-- Buttons to toggle on GM whisper-->
   <input class="whisper-toggle" name="attr_gm_toggle" type="hidden" value=" "/>
-  <button data-i18n="" data-i18n-title="" name="act_whisper" title="gm whisper" type="action">Whisper GM</button>
+  <button data-i18n-title="gm-whisper-toggle" name="act_whisper" title="gm whisper toggle" type="action"> <span data-i18n="whisper-gm">Whisper GM</span></button>
   <!-- LOGO--><img alt="Delta Green" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg"/>
   <!-- CHARACTER SHEETS-->
-  <button data-i18n="" data-i18n-title="" name="act_toggle_character" title="player character button" type="action">pc</button>
-  <button data-i18n="" data-i18n-title="" name="act_toggle_npc" title="non-player character" type="action">npc</button>
+  <button data-i18n-title="sheet-settings" name="act_sheet_select" title="sheet settings" type="action"> <span class="pictos">y </span></button>
 </div>
 <!-- NPC SHEET=============================
 -->
@@ -36,72 +35,117 @@
       <h1 data-i18n="personal-data">personal data</h1>
     </div>
     <div class="section-body">
-      <div class="grid section-border">
-        <h2 data-i18n="">1. last name, first name (and alias or code name if applicable)</h2>
-        <label data-i18-title="" title="last name, first name (and alias or code name if applicable)">
-          <input name="attr_name" placeholder="name" title="${name}" type="text"/>
+      <div class="grid section border-bottom">
+        <h2 class="aligned-left" data-i18n="1-last-name">1. last name, first name (and alias or code name if applicable)</h2>
+        <label data-i18-title="1-last-name" title="1. last name, first name (and alias or code name if applicable)">
+          <input data-i18-placeholder="name" name="attr_name" placeholder="name" title="${name}" type="text"/>
         </label>
         <div class="vert-line"></div>
-        <h2 data-i18n="">2. profession (rank if applicable)</h2>
-        <label data-i18-title="" title="profession (rank if applicable)">
-          <input name="attr_profession" placeholder="profession" title="${profession}" type="text"/>
+        <h2 class="aligned-left" data-i18n="2-profession">2. profession (rank if applicable)</h2>
+        <label data-i18-title="2-profession" title="2. profession (rank if applicable)">
+          <input data-i18-placeholder="" name="attr_profession" placeholder="profession" title="${profession}" type="text"/>
         </label>
       </div>
-      <div class="grid section-border">
-        <h2 data-i18n="">3. employer</h2>
-        <label data-i18-title="" title="employer">
-          <input name="attr_employer" placeholder="employer" title="${employer}" type="text"/>
+      <div class="grid section border-bottom">
+        <h2 class="aligned-left" data-i18n="3-employer">3. employer</h2>
+        <label data-i18-title="3-employer" title="3. employer">
+          <input data-i18-placeholder="employer" name="attr_employer" placeholder="employer" title="${employer}" type="text"/>
         </label>
         <div class="vert-line"></div>
-        <h2 data-i18n="">4. nationality</h2>
-        <label data-i18-title="" title="nationality">
-          <input name="attr_nationality" placeholder="nationality" title="${nationality}" type="text"/>
+        <h2 class="aligned-left" data-i18n="4-nationality">4. nationality</h2>
+        <label data-i18-title="4-nationality" title="4. nationality">
+          <input data-i18-placeholder="nationality" name="attr_nationality" placeholder="nationality" title="${nationality}" type="text"/>
         </label>
       </div>
-      <div class="grid section-border">
-        <h2 data-i18n="">5. sex</h2>
-        <label data-i18-title="" title="sex">
-          <input name="attr_sex" placeholder="sex" title="${sex}" type="text"/>
+      <div class="grid section">
+        <h2 class="aligned-left" data-i18n="5-sex">5. sex</h2>
+        <label data-i18-title="5-sex" title="5. sex">
+          <input data-i18-placeholder="sex" name="attr_sex" placeholder="sex" title="${sex}" type="text"/>
         </label>
         <div class="vert-line"></div>
-        <h2 data-i18n="">6. age and d.o.b.</h2>
-        <label data-i18-title="" title="age and d.o.b.">
-          <input name="attr_age" placeholder="age and d.o.b." title="${age}" type="text"/>
+        <h2 class="aligned-left" data-i18n="6-age">6. age and d.o.b.</h2>
+        <label data-i18-title="6-age" title="age and d.o.b.">
+          <input data-i18-placeholder="age" name="attr_age" placeholder="age and d.o.b." title="${age}" type="text"/>
         </label>
         <div class="vert-line"></div>
-        <h2 data-i18n="">7. education and occupational history</h2>
-        <label data-i18-title="" title="education">
-          <input name="attr_education" placeholder="education and occupational history" title="${education}" type="text"/>
+        <h2 class="aligned-left" data-i18n="7-education">7. education and occupational history</h2>
+        <label data-i18-title="7-education" title="7. education and occupational history">
+          <input data-i18-placeholder="education" name="attr_education" placeholder="education and occupational history" title="${education}" type="text"/>
         </label>
       </div>
     </div>
   </div>
-  <!--STATISTICAL & PSYCHOLOGICAL DATA-->
-  <div class="grid personal-data border">
+  <!--STATISTICAL DATA-->
+  <div class="grid statistical-data border">
     <div class="section-header">
-      <h1 data-i18n="">statistical data</h1>
+      <h1>statistical data</h1>
     </div>
-    <div class="section-body">
-      <div class="grid section-border">
-        <h2 data-i18n="">8. statistics</h2>
-        <h2 data-i18n="">score</h2>
-        <h2 data-i18n="">x5</h2>
-        <h2 data-i18n="">distinguishing features</h2>
+    <div class="grid section-body">
+      <div class="grid section-body-stats">
+        <div class="grid section border-bottom">
+          <h2 class="aligned-left">8. statistics</h2>
+          <div class="vert-line"></div>
+          <h2 class="center">score</h2>
+          <div class="vert-line"></div>
+          <h2 class="center">x5</h2>
+          <div class="vert-line"></div>
+          <h2 class="aligned-left">distinguishing features</h2>
+        </div>
+        <div class="grid section border-bottom">
+          <h3 class="aligned-left">Strength (STR)</h3>
+          <div class="vert-line"></div>
+        </div>
+        <div class="grid section border-bottom">
+          <h3 class="aligned-left">Constitution (CON)</h3>
+          <div class="vert-line"></div>
+        </div>
+        <div class="grid section border-bottom">
+          <h3 class="aligned-left">Dexterity (DEX)</h3>
+          <div class="vert-line"></div>
+        </div>
+        <div class="grid section border-bottom">
+          <h3 class="aligned-left">Intelligence (INT)</h3>
+          <div class="vert-line"></div>
+        </div>
+        <div class="grid section border-bottom">
+          <h3 class="aligned-left">Power (POW)</h3>
+          <div class="vert-line"></div>
+        </div>
+        <div class="grid section border-bottom">
+          <h3 class="aligned-left">Charisma (CHA)</h3>
+          <div class="vert-line"></div>
+        </div>
+      </div>
+      <div class="grid section-body-derived">
+        <div class="grid section border-bottom">
+          <h2 class="aligned-left">9. derived attributes</h2>
+          <div class="vert-line"></div>
+          <h2 class="center">maximum</h2>
+          <div class="vert-line"></div>
+          <h2 class="center">current</h2>
+          <div class="vert-line"></div>
+        </div>
       </div>
     </div>
-    <!--STATISTICAL DATA-->
+  </div>
+  <!--PSYCHOLOGICAL DATA-->
+  <div class="grid pyschological-data border">
     <div class="section-header">
-      <h1 data-i18n="">pyschological data </h1>
+      <h1>pyschological data </h1>
     </div>
-    <!--PSYCHOLOGICAL DATA-->
   </div>
 </div>
 <!--NOTES SHEET=============================
 -->
 <div class="notes"></div>
-<!--OPTIONS SHEET=============================
+<!--SETTINGS SHEET=============================
 -->
-<div class="options"></div>
+<div class="settings">
+  <select name="attr_sheet_select" title="character sheet select" selected="selected">
+    <option data-i18n="" value="character">character</option>
+    <option data-i18n="" value="npc">npc</option>
+  </select>
+</div>
 <!--FOOTER=============================
 -->
 <footer><span>Version </span><span name="attr_version"></span></footer>
@@ -115,26 +159,29 @@
 <!--include src/pug/rolltemplate.pug-->
 <!--SHEETWORKERS=============================
 -->
-<script type="text/worker"><!-- SCRIPTS
-   ============================= -->
+<script type="text/worker">
+	// === SHARED FUNCTIONS
 	const setAttributes = (update, silent) => { 
 		(silent === true) ? setAttrs(update, {silent:true}) : setAttrs(update); 
 	};
 
 	// === ATTRIBUTE ARRAYS
 		const arrays = {
-			attributes: ["agility", "body", "charisma", "edge", "intuition", "logic", "strength", "willpower" ], //EXAMPLE
-			repeating_settings: [],
-			sheets: ["character", "npc"], //EXAMPLE. ADD MOTE SHEET TYPES here
+			attributes: [""], 
+			repeating_settings: [""],
+			sheets: ["sheet_select"],
 			toggles: ["attributes"]
 		};
 
-	// === SWITCH BETWEEN SHEET TYPES
+	// === SWITCH BETWEEN SHEETS
 	    arrays["sheets"].forEach(attr => {
-	        on(`clicked:toggle_${attr}`, (eventinfo) => {
-	        	setAttributes({sheet_type: `${attr}`}, true);
+	        on(`clicked:${attr} change:${attr}`, (eventinfo) => {
+	        	console.log(`%c SHEETS`, "color: blue; font-weight:bold");
+	        	console.log(eventinfo);
+	        	//setAttrs({sheet_type: `${attr}`}, true);
 	        });
 	    });
+
 
 	// === TOGGLE INPUT SETTINGS
 	    arrays["toggles"].forEach(attr => {
@@ -172,4 +219,7 @@
 				setAttrs({version: 1}, () => {versioning(1)});
 			};
 		};
+
+
+
 </script>
