refactoed pug stats

--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -92,27 +92,39 @@
           <h2 class="aligned-left">distinguishing features</h2>
         </div>
         <div class="grid section border-bottom">
-          <h3 class="aligned-left">Strength (STR)</h3>
+          <button name="Strength" title="Strength roll" type="roll" value="">
+            <h3 class="aligned-left">Strength<span> (STR)</span></h3>
+          </button>
           <div class="vert-line"></div>
         </div>
         <div class="grid section border-bottom">
-          <h3 class="aligned-left">Constitution (CON)</h3>
+          <button name="Constitution" title="Constitution roll" type="roll" value="">
+            <h3 class="aligned-left">Constitution<span> (CON)</span></h3>
+          </button>
           <div class="vert-line"></div>
         </div>
         <div class="grid section border-bottom">
-          <h3 class="aligned-left">Dexterity (DEX)</h3>
+          <button name="Dexterity" title="Dexterity roll" type="roll" value="">
+            <h3 class="aligned-left">Dexterity<span> (DEX)</span></h3>
+          </button>
           <div class="vert-line"></div>
         </div>
         <div class="grid section border-bottom">
-          <h3 class="aligned-left">Intelligence (INT)</h3>
+          <button name="Intelligence" title="Intelligence roll" type="roll" value="">
+            <h3 class="aligned-left">Intelligence<span> (INT)</span></h3>
+          </button>
           <div class="vert-line"></div>
         </div>
         <div class="grid section border-bottom">
-          <h3 class="aligned-left">Power (POW)</h3>
+          <button name="Power" title="Power roll" type="roll" value="">
+            <h3 class="aligned-left">Power<span> (POW)</span></h3>
+          </button>
           <div class="vert-line"></div>
         </div>
         <div class="grid section border-bottom">
-          <h3 class="aligned-left">Charisma (CHA)</h3>
+          <button name="Charisma" title="Charisma roll" type="roll" value="">
+            <h3 class="aligned-left">Charisma<span> (CHA)</span></h3>
+          </button>
           <div class="vert-line"></div>
         </div>
       </div>
