statistical data finished

--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -1,13 +1,13 @@
 
-<!--VERSION=============================
--->
+<!--VERSION-->
+<!-- =============================-->
 <input name="attr_version" type="hidden" value="1"/>
-<!-- TABS=============================
--->
+<!-- TABS-->
+<!-- =============================-->
 <input class="type" name="attr_sheet_type" type="hidden" value="character"/>
 <input class="display_string" name="attr_character_settings" type="hidden" value=""/>
-<!--TABS & LOGO=============================
--->
+<!--TABS & LOGO-->
+<!-- =============================-->
 <div class="tabs grid">
   <!-- Buttons to toggle on GM whisper-->
   <input class="whisper-toggle" name="attr_gm_toggle" type="hidden" value=" "/>
@@ -16,8 +16,8 @@
   <!-- CHARACTER SHEETS-->
   <button data-i18n-title="sheet-settings" name="act_sheet_select" title="sheet settings" type="action"> <span class="pictos">y </span></button>
 </div>
-<!-- NPC SHEET=============================
--->
+<!-- NPC SHEET-->
+<!-- =============================-->
 <div class="npc">
   <div class="box npc-flex">
     <p>NPC STUFF</p>
@@ -26,8 +26,8 @@
     <p>MORE NPC STUFF </p>
   </div>
 </div>
-<!--PC SHEET=============================
--->
+<!--PC SHEET-->
+<!-- =============================-->
 <div class="pc">
   <!--PERSONAL DATA-->
   <div class="grid personal-data border">
@@ -80,6 +80,7 @@
     <div class="section-header">
       <h1>statistical data</h1>
     </div>
+    <!--STATISTICS-->
     <div class="grid section-body">
       <div class="grid section-body-stats">
         <div class="grid section border-bottom">
@@ -92,42 +93,73 @@
           <h2 class="aligned-left">distinguishing features</h2>
         </div>
         <div class="grid section border-bottom">
-          <button name="Strength" title="Strength roll" type="roll" value="">
-            <h3 class="aligned-left">Strength<span> (STR)</span></h3>
+          <button name="strength" title="strength roll" type="roll" value="">
+            <h3 class="aligned-left">strength</h3><span>(STR)</span>
           </button>
           <div class="vert-line"></div>
+          <input name="attr_strength_score" placeholder="10" title="@{strength_score}" type="number"/>
+          <div class="vert-line"></div><span class="center" name="attr_strength" title="@{strength}"></span>
+          <div class="vert-line"></div>
+          <input name="attr_strength_features" placeholder="distinguishing features" title="@{strength_features}" type="text"/>
+          <input name="attr_strength" type="hidden" value="50"/>
         </div>
         <div class="grid section border-bottom">
-          <button name="Constitution" title="Constitution roll" type="roll" value="">
-            <h3 class="aligned-left">Constitution<span> (CON)</span></h3>
+          <button name="constitution" title="constitution roll" type="roll" value="">
+            <h3 class="aligned-left">constitution</h3><span>(CON)</span>
           </button>
           <div class="vert-line"></div>
+          <input name="attr_constitution_score" placeholder="10" title="@{constitution_score}" type="number"/>
+          <div class="vert-line"></div><span class="center" name="attr_constitution" title="@{constitution}"></span>
+          <div class="vert-line"></div>
+          <input name="attr_constitution_features" placeholder="distinguishing features" title="@{constitution_features}" type="text"/>
+          <input name="attr_constitution" type="hidden" value="50"/>
         </div>
         <div class="grid section border-bottom">
-          <button name="Dexterity" title="Dexterity roll" type="roll" value="">
-            <h3 class="aligned-left">Dexterity<span> (DEX)</span></h3>
+          <button name="dexterity" title="dexterity roll" type="roll" value="">
+            <h3 class="aligned-left">dexterity</h3><span>(DEX)</span>
           </button>
           <div class="vert-line"></div>
+          <input name="attr_dexterity_score" placeholder="10" title="@{dexterity_score}" type="number"/>
+          <div class="vert-line"></div><span class="center" name="attr_dexterity" title="@{dexterity}"></span>
+          <div class="vert-line"></div>
+          <input name="attr_dexterity_features" placeholder="distinguishing features" title="@{dexterity_features}" type="text"/>
+          <input name="attr_dexterity" type="hidden" value="50"/>
         </div>
         <div class="grid section border-bottom">
-          <button name="Intelligence" title="Intelligence roll" type="roll" value="">
-            <h3 class="aligned-left">Intelligence<span> (INT)</span></h3>
+          <button name="intelligence" title="intelligence roll" type="roll" value="">
+            <h3 class="aligned-left">intelligence</h3><span>(INT)</span>
           </button>
           <div class="vert-line"></div>
+          <input name="attr_intelligence_score" placeholder="10" title="@{intelligence_score}" type="number"/>
+          <div class="vert-line"></div><span class="center" name="attr_intelligence" title="@{intelligence}"></span>
+          <div class="vert-line"></div>
+          <input name="attr_intelligence_features" placeholder="distinguishing features" title="@{intelligence_features}" type="text"/>
+          <input name="attr_intelligence" type="hidden" value="50"/>
         </div>
         <div class="grid section border-bottom">
-          <button name="Power" title="Power roll" type="roll" value="">
-            <h3 class="aligned-left">Power<span> (POW)</span></h3>
+          <button name="power" title="power roll" type="roll" value="">
+            <h3 class="aligned-left">power</h3><span>(POW)</span>
           </button>
           <div class="vert-line"></div>
+          <input name="attr_power_score" placeholder="10" title="@{power_score}" type="number"/>
+          <div class="vert-line"></div><span class="center" name="attr_power" title="@{power}"></span>
+          <div class="vert-line"></div>
+          <input name="attr_power_features" placeholder="distinguishing features" title="@{power_features}" type="text"/>
+          <input name="attr_power" type="hidden" value="50"/>
         </div>
         <div class="grid section border-bottom">
-          <button name="Charisma" title="Charisma roll" type="roll" value="">
-            <h3 class="aligned-left">Charisma<span> (CHA)</span></h3>
+          <button name="charisma" title="charisma roll" type="roll" value="">
+            <h3 class="aligned-left">charisma</h3><span>(CHA)</span>
           </button>
           <div class="vert-line"></div>
+          <input name="attr_charisma_score" placeholder="10" title="@{charisma_score}" type="number"/>
+          <div class="vert-line"></div><span class="center" name="attr_charisma" title="@{charisma}"></span>
+          <div class="vert-line"></div>
+          <input name="attr_charisma_features" placeholder="distinguishing features" title="@{charisma_features}" type="text"/>
+          <input name="attr_charisma" type="hidden" value="50"/>
         </div>
       </div>
+      <!--DERIVED ATTRIBUTES-->
       <div class="grid section-body-derived">
         <div class="grid section border-bottom">
           <h2 class="aligned-left">9. derived attributes</h2>
@@ -135,8 +167,44 @@
           <h2 class="center">maximum</h2>
           <div class="vert-line"></div>
           <h2 class="center">current</h2>
-          <div class="vert-line"></div>
         </div>
+        <div class="grid section border-bottom">
+          <div class="derived-attr">
+            <h3 class="aligned-left">hit points</h3><span>(HP)</span>
+          </div>
+          <div class="vert-line"></div><span class="center" name="attr_hit_points_max" title="@{hit_points_max}"></span>
+          <div class="vert-line"></div>
+          <input name="attr_hit_points" placeholder="10" title="@{hit_points}" type="number"/>
+        </div>
+        <div class="grid section border-bottom">
+          <div class="derived-attr">
+            <h3 class="aligned-left">willpower points</h3><span>(WP)</span>
+          </div>
+          <div class="vert-line"></div><span class="center" name="attr_willpower_points_max" title="@{willpower_points_max}"></span>
+          <div class="vert-line"></div>
+          <input name="attr_willpower_points" placeholder="10" title="@{willpower_points}" type="number"/>
+        </div>
+        <div class="grid section border-bottom">
+          <div class="derived-attr">
+            <h3 class="aligned-left">sanity points</h3><span>(SAN)</span>
+          </div>
+          <div class="vert-line"></div><span class="center" name="attr_sanity_points_max" title="@{sanity_points_max}"></span>
+          <div class="vert-line"></div>
+          <input name="attr_sanity_points" placeholder="10" title="@{sanity_points}" type="number"/>
+        </div>
+        <div class="grid section border-bottom">
+          <div class="derived-attr">
+            <h3 class="aligned-left">breaking points</h3><span>(BP)</span>
+          </div>
+          <div class="vert-line"></div><span class="center" name="attr_breaking_points_max" title="@{breaking_points_max}"></span>
+          <div class="vert-line"></div>
+          <input name="attr_breaking_points" placeholder="10" title="@{breaking_points}" type="number"/>
+        </div>
+      </div>
+      <!--PHYSICAL DESCRIPTION-->
+      <div class="grid section-body-physical">
+        <h2 class="aligned-left">9. physical description</h2>
+        <textarea name="attr_physical_description" placeholder="physical description" title="@{physical_description}"></textarea>
       </div>
     </div>
   </div>
@@ -147,30 +215,27 @@
     </div>
   </div>
 </div>
-<!--NOTES SHEET=============================
--->
+<!--NOTES SHEET-->
+<!-- =============================-->
 <div class="notes"></div>
-<!--SETTINGS SHEET=============================
--->
+<!--SETTINGS SHEET-->
+<!-- =============================-->
 <div class="settings">
   <select name="attr_sheet_select" title="character sheet select" selected="selected">
     <option data-i18n="" value="character">character</option>
     <option data-i18n="" value="npc">npc</option>
   </select>
 </div>
-<!--FOOTER=============================
--->
+<!--FOOTER-->
+<!-- =============================-->
 <footer><span>Version </span><span name="attr_version"></span></footer>
-<!--HIDDEN ATTRIBUTES
-=============================
-
-
--->
-<!--ROLL TEMPLATE=============================
--->
+<!--HIDDEN ATTRIBUTES-->
+<!-- =============================-->
+<!--ROLL TEMPLATE-->
+<!-- =============================-->
 <!--include src/pug/rolltemplate.pug-->
-<!--SHEETWORKERS=============================
--->
+<!--SHEETWORKERS-->
+<!-- =============================-->
 <script type="text/worker">
 	// === SHARED FUNCTIONS
 	const setAttributes = (update, silent) => { 
